# cmdsgen

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  justfile  pyproject.toml
.github/: README.md
.gitlab/merge_request_templates/: Default.md
scripts/: github-readme.py
src/cmdsgen/: __main__.py  arguments.py  cli.py  fetch.py  flag_parser.py  logging.py  param_parser.py  rtype_parser.py  scanner.py  utils.py
